Blender crash after color picking in Texture Paint Mode #42393

Closed
opened 2014-10-25 17:35:01 +02:00 by Paul · 9 comments

System Information
Windows 7, Geforce 560gt

Blender Version
Broken: 2.72b official

Short description of error
blender crashes after tryin to pick color from mesh that has not material attached to

Exact steps for others to reproduce the error
Create new scene, select default cube go to texture paint mode, add simple uv go to slots and change painting mode from material to image, create new canvas and pick color from cube.

**System Information** Windows 7, Geforce 560gt **Blender Version** Broken: 2.72b official **Short description of error** blender crashes after tryin to pick color from mesh that has not material attached to **Exact steps for others to reproduce the error** Create new scene, select default cube go to texture paint mode, add simple uv go to slots and change painting mode from material to image, create new canvas and pick color from cube.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @riceart

Added subscriber: @riceart

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

I cannot reproduce this here, could you please upload a file that's crashing for you?

I cannot reproduce this here, could you please upload a file that's crashing for you?
Author

Ok, so i checked if its my computer fault or not and tested on my surface pro
Windows 8.1 intel 4000

blender 2.72b official
same problem

Kevindietrich, check file{F119648}

Ok, so i checked if its my computer fault or not and tested on my surface pro Windows 8.1 intel 4000 blender 2.72b official same problem Kevindietrich, check file{[F119648](https://archive.blender.org/developer/F119648/blend_crash.blend)}

Thanks for the file, can confirm the crash now.

@riceart this is why you should always attached a file and give precise steps, at first I thought you meant the color picker, not the sampling tool (S key)...

Thanks for the file, can confirm the crash now. @riceart this is why you should always attached a file and give precise steps, at first I thought you meant the color picker, not the sampling tool (S key)...
Antonis Ryakiotakis self-assigned this 2014-10-27 10:30:00 +01:00

This issue was referenced by 9c9b145dab

This issue was referenced by 9c9b145dabb9b5d4c13b06c12030c1b5dbd670bf

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 9c9b145dab.

Closed by commit 9c9b145dab.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42393
No description provided.