Fix T42393 crash in texture paint sampling in image mode when mesh did not have a material